Schema 및 DB 연결 완료

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "| 강예은 | 김명휘 | 박동규 | 박윤혜 | 황동규 |\r | :---: | :---: | :---: | :---: | :---: |\r | <img src='https://makeus-challenge.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F6e3b14dc-3df4-4c77-8f63-8a28ae1b16fb%2FIMG_2331.jpeg?table=block&id=f3b793a4-263a-4a95-b1e6-7068eea5bfb4&spaceId=f1912130-0409-4e90-a90f-6091ae253e73&width=580&userId=&cache=v2' height=80 width=80></img> | <img src='https://makeus-challenge.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F9fe6ee24-8c99-4c16-a722-7c97b5c6fd19%2FKakaoTalk_20230629_172112840.jpg?table=block&id=9090ecdb-8f70-4045-932c-6c2e3f90bc72&spaceId=f1912130-0409-4e90-a90f-6091ae253e73&width=2000&userId=&cache=v2' height=80 width=80></img> | <img src='https://makeus-challenge.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Fcd4b60b0-2fd2-4545-82a9-caa695d74be5%2FIMG_7793.jpeg?table=block&id=0991bb94-0b8e-4c5b-903d-e194e85635da&spaceId=f1912130-0409-4e90-a90f-6091ae253e73&width=770&userId=&cache=v2' height=80 width=80></img> | <img src='https://makeus-challenge.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2Ff44a7f42-0622-4f41-a49f-06efa7d30a3c%2FKakaoTalk_Photo_2023-06-17-17-26-11.jpeg?table=block&id=64f022f6-44f0-4578-9845-18d8fff5868c&spaceId=f1912130-0409-4e90-a90f-6091ae253e73&width=2000&userId=&cache=v2' height=80 width=80></img> | <img src='https://avatars.githubusercontent.com/u/121680372?v=4' height=80 width=80></img> |",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon server.js",
+		"dev": "nodemon init.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.3.3",
 		"morgan": "^1.10.0",
