--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-session": "^1.17.3",
 		"mongoose": "^7.3.3",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.0.1"
