--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "winston": "^3.10.0"
   }
 }
