--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-session": "^1.17.3",
+		"moment": "^2.29.4",
+		"moment-timezone": "^0.5.43",
 		"mongoose": "^7.3.3",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.0.1"
