--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"moment-timezone": "^0.5.43",
 		"mongoose": "^7.3.3",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.1"
 	}
 }
