--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"mongoose": "^7.3.3",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
-		"nodemon": "^3.0.1"
+		"nodemon": "^3.0.1",
+		"path": "^0.12.7",
+		"uuid4": "^2.0.3"
 	}
 }
