--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -20,7 +21,8 @@
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "pass": "^0.2.0",
+    "nodemailer": "^6.9.4",
+    "path": "^0.12.7",
     "pug": "^3.0.2",
     "uuid": "^9.0.0"
   },
