할 수 있다 동규야

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DB_URL = mongodb+srv://qkrehdrb0813:ehdfprl77@cluster0.w9mqdtx.mongodb.net/love_keeper
-COOKIE_SECRET = cookiecookie
+DB_URL=mongodb+srv://qkrehdrb0813:ehdfprl77@cluster0.w9mqdtx.mongodb.net/love_keeper
+COOKIE_SECRET=cookiecookie
+EMAIL_USER=sjkl6206s@gmail.com
+EMAIL_PASS=xkbuydogshmbalqp
